# convert

./: .gitignore  README.md  pyproject.toml
convert-rs/: Cargo.toml
convert-rs/src/: main.rs
python/: README.md  pyproject.toml
python/src/convert/: __init__.py  slices.py
rust/: Cargo.toml  README.md
rust/src/: convert.rs  lib.rs  slices.rs
src/convert/: convert.py  main.py
