[project]
name = "convert"
version = "0.1.0"
description = "Minimal standalone ND2 to TIFF converter matching mupattern convert."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "nd2>=0.10",
  "numpy>=1.26",
  "rich>=13.7",
  "tifffile>=2024.1",
  "typer>=0.12",
]

[project.scripts]
convert = "convert.main:main"

[build-system]
requires = ["hatchling>=1.27", "pathspec<0.13"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/convert"]
