[package]
name = "convert-rs"
version = "0.1.0"
edition = "2021"
description = "Standalone ND2 to TIFF converter."

[[bin]]
name = "convert-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
nd2-rs = { git = "https://github.com/keejkrej/nd2-rs" }
tiff = "0.11"

[dev-dependencies]
tempfile = "3"
