[package]
name = "convert-rs"
version = "0.1.0"
edition = "2021"
description = "Rust CLI package for standalone ND2 to TIFF conversion."
readme = "README.md"

[[bin]]
name = "convert-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
nd2-rs = { path = "../../nd2-rs" }
tiff = "0.11"

[dev-dependencies]
tempfile = "3"
